--- a/game2048/src/main/AndroidManifest.xml
+++ b/game2048/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="com.cn.guojinhu.game2048">
 
     <application
+        android:name=".Base.BaseApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -10,10 +11,16 @@
         android:theme="@style/AppTheme">
         <activity android:name=".activity.GameActivity">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+                <action android:name="android.intent.action.MAIN"/>
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".activity.FullscreenActivity"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:label="@string/title_activity_fullscreen"
+            android:theme="@style/FullscreenTheme">
         </activity>
     </application>
 
