--- a/game2048/src/main/AndroidManifest.xml
+++ b/game2048/src/main/AndroidManifest.xml
@@ -5,6 +5,7 @@
     <application
         android:name=".Base.BaseApplication"
         android:allowBackup="true"
+        android:backupAgent="com.cn.guojinhu.game2048.utils.GameBackupAgent"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
@@ -20,11 +21,15 @@
             android:name=".activity.FullscreenActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/title_activity_fullscreen"
-            android:theme="@style/FullscreenTheme"></activity>
+            android:theme="@style/FullscreenTheme">
+
+        </activity>
         <activity
             android:name=".activity.SettingsActivity"
             android:label="@string/title_activity_main"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar">
+
+        </activity>
     </application>
 
 </manifest>
