--- a/systemwidget/src/main/AndroidManifest.xml
+++ b/systemwidget/src/main/AndroidManifest.xml
@@ -19,15 +19,15 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".activity.ScrollActivity">
-
-        </activity>
+        <activity android:name=".activity.ScrollActivity" />
         <activity
             android:name=".activity.TestActivity"
             android:label="@string/title_activity_test"
-            android:theme="@style/AppTheme.NoActionBar">
-
-        </activity>
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".activity.CustomTitleActivity" />
+        <activity android:name=".activity.CustomImageActivity" />
+        <activity android:name=".activity.CustomVolumeActivity" />
+        <activity android:name=".activity.WebViewActivity"></activity>
     </application>
 
 </manifest>
